--- a/css/style.css
+++ b/css/style.css
@@ -97,15 +97,19 @@ body {
 }
 .project-desc {
 	text-align: center;
-    padding: 5px;
+	padding: 5px;
+
+	height: 80%;
+	overflow: auto;
 }
 .project:hover .project-desc {
-	overflow-y: auto;
+	height: 75%;
+	overflow: auto;
 }
 #footer {
 	text-align: center;
 	font-size: 1em;
-	background: rgba(255,255,255,.8);
+	background: rgba(116,160,62,.8);
 	padding: 10px;
 	width: 90%;
 	height: 5%;
@@ -124,8 +128,10 @@ body {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	color: #ddd;
+	font-size: 1.2em;
 }
 #footer-content a {
-	text-decoration: none;
-	color: white;	
+	color: #eee;
+	font-size: 1.1em;
 }
